# random-todo

./: CMakeLists.txt  README.md  akorandom.cpp  akorandom.h  main.cpp  random-todo.cpp  random-todo.h  random-todo.kdev4
tests/: CMakeLists.txt  random-todoTest.cpp  random-todoTest.h
